# circulax

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  ReadMe.md  cliff.toml  gen_doc_stubs.py  hooks.py  index.html  mkdocs.yml  objects.inv  openvaf_jax_circulax_integration.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
SUMMARY/: index.html
benchmarking/: diode_cascade_solver_benchmark.py  diode_cascade_testbench.py  diode_cascade_vs_ngspice.py  diode_clipper_hb_testbench.py  fullwave_rect_testbench.py  fullwave_rect_vs_ngspice.py  lc_ladder.ipynb  lc_ladder_testbench.py  rc_pulse_testbench.py  rc_pulse_vs_ngspice.py  stiff_newton_benchmark.py
benchmarking/bench_utils/: metrics.py  ngspice.py  plotting.py  runner.py
benchmarking/circuits/: diode_cascade.cir  fullwave_rect.cir  rc_pulse.cir
benchmarks/: README.md  _paths.py  run.py
benchmarks/bench_utils/: ngspice.py
benchmarks/diode/: bench_circulax.py
benchmarks/diode_cascade_solver/: run.py
benchmarks/diode_clipper_hb/: run.py
benchmarks/fullwave_rect/: run.py
benchmarks/juncap200/: bench_circulax.py  results.csv  run.py
benchmarks/lc_ladder/: lc_ladder.ipynb  run.py
benchmarks/legacy/: diode_cascade_solver_benchmark.py  diode_cascade_testbench.py  diode_clipper_hb_testbench.py  fullwave_rect_testbench.py  lc_ladder.ipynb  lc_ladder_testbench.py  rc_pulse_testbench.py  stiff_newton_benchmark.py
benchmarks/mosvar/: bench_circulax.py  results.csv  run.py
benchmarks/mul/: README.md  bench_circulax.py  results.csv  run.py
benchmarks/rc/: README.md  bench_circulax.py  results.csv  run.py
benchmarks/ring/: README.md  backend_results.csv  bench_backends.py  bench_circulax.py  bench_circulax_static.py  bench_sensitivity.py  ngspice_gen.py  results.csv  run.py  vacask_convergence_sweep.py  vacask_gen.py
benchmarks/ring_bsim3/: bench_bsim3.py
benchmarks/ring_bsim4/: bench_bsim4_osdi.py  va_defaults.py
benchmarks/stiff_newton/: run.py
benchmarks/utils/: metrics.py  ngspice.py
choosing_a_solver/: index.html
circulax/: __init__.py  circuit.py  compiler.py  netlist.py  s_transforms.py  testbench.py  utils.py
circulax/components/: base_component.py  electronic.py  osdi.py  osdi_component.py  photonic.py  va_component.py
circulax/solvers/: __init__.py  ac_sweep.py  adjoint.py  assembly.py  circuit_diffeq.py  harmonic_balance.py  linear.py  sensitivity.py  transient.py
circulax/va/: __init__.py
demos/: 01_lc_filter_synthesis.ipynb  02_oscillator_hb_tuning.ipynb  03_photonic_demux.ipynb  04_photonic_cmz_demux.ipynb  05_hemt_pa_optimization.ipynb
docs/: SUMMARY.md  benchmark_psp103_ring.md  bosdi_psp103_ring_oscillator_issue.md  bosdi_vmap_request.md  choosing_a_solver.md  gen_doc_stubs.py  harmonic_balance.md  hooks.py  index.md  inverse_design.md  nbconvert_config.py  notebook_adjoint_plan.md  openvaf_internals.md  osdi_components.md  transient.md  va_concrete_sccp_plan.md  va_gap_investigation.md  va_performance_plan.md  va_performance_results.md  va_phi_batching_plan.md  va_phi_lowering_fix.md  va_psp103_lowering_status.md  va_to_circulax_translator.md  writing_components.md
docs/examples/: 01_lc_filter_synthesis.md  02_oscillator_hb_tuning.md  03_photonic_cmz_demux.md  03_photonic_demux.md  04_hemt_pa_optimization.md  04_photonic_cmz_demux.md  05_hemt_pa_optimization.md  05_psp103_ring_param_fitting.md  LCR.md  LC_ladder.md  ac_sweep.md  diode_clipper.md  harmonic_balance.md  lc_ladder.md  lcr_transient.md  mos_diff_pair.md  mzm.md  photonics_transient.md  resistor_ladder.md  ring_modulator.md  ring_oscillator_osdi.md
docs/stylesheets/: extra.css
examples/: harmonic_balance.ipynb
examples/01_lc_filter_synthesis/: index.html
examples/02_oscillator_hb_tuning/: index.html
examples/03_photonic_cmz_demux/: index.html
examples/04_hemt_pa_optimization/: index.html
examples/05_psp103_ring_param_fitting/: index.html
examples/LCR/: index.html
examples/LC_ladder/: index.html
examples/ac_sweep/: index.html
examples/back_propagation/: 01_lc_filter_synthesis.ipynb  02_oscillator_hb_tuning.ipynb  03_photonic_demux.ipynb  05_hemt_pa_optimization.ipynb
examples/diode_clipper/: index.html
examples/electrical/: diode_clipper.ipynb  harmonic_balance.ipynb  lc_ladder.ipynb  mos_diff_pair.ipynb  ring_oscillator_osdi.ipynb
examples/getting_started/: ac_sweep.ipynb  lcr_transient.ipynb  resistor_ladder.ipynb
examples/harmonic_balance/: index.html
examples/inverse_design/: 01_lc_filter_synthesis.ipynb  02_oscillator_hb_tuning.ipynb  03_photonic_cmz_demux.ipynb  03_photonic_demux.ipynb  04_hemt_pa_optimization.ipynb  04_photonic_cmz_demux.ipynb  05_hemt_pa_optimization.ipynb  (+1 more)
gen_doc_stubs/: index.html
harmonic_balance/: index.html
hooks/: index.html
inverse_design/: index.html
references/: index.html
reports/: bench_pid.csv  bench_ring.csv  psp103_schur_dump.txt  ring_integ.csv  ring_sweep.csv
scripts/: activate.bat  activate.sh  bench_jax_native_ring.py  bench_one.py  bench_opt_loop.py  bench_pid_investigate.py  bench_ring_vs_vacask.py  bench_trap_factorized.py  bench_vmap_jit_check.py  build_docs.py  clean_dist.py  compile_osdi.py  copy_readme.py  diamond_bug_repro.py  gen_vacask_ring.py  pid_one.py  psp103_schur_dump.py  ring_backend_check.py  ring_bdf2_cload0.py  ring_dt_sweep.py  ring_integ_one.py  ring_integrator_adaptive.py  ring_integrator_check.py  ring_integrator_recheck.py  ring_one_case.py  run_notebooks.py  va_dce_check.py  va_newton_profile.py
search/: search_index.json
tests/: conftest.py  test_ac_sweep.py  test_adjoint.py  test_circuit.py  test_compiler.py  test_components.py  test_dc.py  test_fdomain.py  test_harmonic_balance.py  test_kfnetlist.py  test_notebooks.py  test_osdi_component_basic.py  test_osdi_integration.py  test_osdi_resistor_ladder.py  test_psp103_chain.py  test_psp103_device.py  test_psp103_ring_oscillator.py  test_psp103_vs_vacask.py  test_sax_component.py  test_sensitivity.py  test_setup_decorator.py  test_testbench.py  test_transient.py
transient/: index.html
writing_components/: index.html
(+278 files in other folders)
