[project]
name = "circulax"
dynamic = ["version"]
description = "Differentiable circuit simulator based on JAX"
authors = [
    { name = "Chris Daunt", email = "chris.ll.m.daunt@gmail.com" }
]
readme = "ReadMe.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["jax", "differentiable", "circuit", "simulation", "photonics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "jax>=0.7.1,<0.8",
    "jaxlib>=0.7.1,<0.8",
    "diffrax>=0.7.0,<0.8",
    "sax>=0.15.15",
    "matplotlib",
    "typing-extensions>=4.13.2",
    "lineax",
    "klujax>=0.4.8"
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "papermill",
    "ipykernel>=6.29.5",   # required by papermill to execute notebooks
    "schemdraw",
]
docs = [
    "ipykernel>=6.29.5",
    "nbconvert",
    "papermill",
    "hippogriffe==0.2.2",
    "mkdocs==1.6.1",
    "mkdocs-include-exclude-files==0.1.0",
    "mkdocs-material==9.6.7",
    "mkdocstrings==0.28.3",
    "mkdocstrings-python==1.16.8",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "pymdown-extensions",
    "mkdocs_matplotlib",
    "mkautodoc>=0.2.0",
    "mkdocs-autorefs>=1.3.0",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-minify-plugin>=0.8.0",
]
dev = [
    "circulax[test,docs]",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/cdaunt/circulax"
Repository = "https://github.com/cdaunt/circulax"
Documentation = "https://cdaunt.github.io/circulax"
Issues = "https://github.com/cdaunt/circulax/issues"

# ---------------------------------------------------------------------------
# Build system (PyPI / hatch)
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "circulax/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["circulax"]

# ---------------------------------------------------------------------------
# Pixi workspace
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64","osx-arm64"]
# pixi-build is still preview-gated
preview = ["pixi-build"]

[tool.pixi.activation]
scripts = ["scripts/activate.sh"]

# Shared editable install for all environments
[tool.pixi.pypi-dependencies]
circulax = { path = ".", editable = true }

# ---------------------------------------------------------------------------
# Conda package build (pixi build)
# pixi-build-python reads [project] metadata directly — no recipe.yaml needed.
# ---------------------------------------------------------------------------

[tool.pixi.package]
name = "circulax"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

# ---------------------------------------------------------------------------
# Features — one per Python version
# ---------------------------------------------------------------------------

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
tqdm = ">=4.67.1,<5"

# Test feature — used by CI environments
[tool.pixi.feature.test.pypi-dependencies]
circulax = { path = ".", editable = true, extras = ["test"] }


# Dev tooling feature
[tool.pixi.feature.dev.dependencies]
tqdm = ">=4.67.1,<5"
uv = ">=0.6"

# Benchmark feature — NGSpice accuracy comparison
[tool.pixi.feature.benchmark.dependencies]
scipy = ">=1.13"
matplotlib = ">=3.9"
tqdm = ">=4.67"

# NGSpice is linux-64 only (no osx-arm64 conda package)
[tool.pixi.feature.benchmark.target.linux-64.dependencies]
ngspice = "*"

[tool.pixi.feature.benchmark.pypi-dependencies]
circulax = { path = ".", editable = true }


# ---------------------------------------------------------------------------
# Tasks
# ---------------------------------------------------------------------------

[tool.pixi.tasks]
copy_readme      = "cp ReadMe.md docs/index.md && sed -i 's|docs/images|images|g' docs/index.md"
install_ipkernel = "python -m ipykernel install --user --name circulax"
nbrun            = { cmd = ["/bin/sh", "-c", "find examples -name '*.ipynb' -not -path '*/.ipynb_checkpoints/*' | xargs -P4 -I NB papermill NB NB -k circulax"], depends-on = ["install_ipkernel"], description = "Execute all notebooks in-place with papermill (parallel)" }
nbdocs           = { cmd = "rm -rf docs/examples && mkdir -p docs/examples && jupyter nbconvert --config docs/nbconvert_config.py --to markdown", depends-on = ["copy_readme"], description = "Convert executed notebooks to Markdown in docs/examples/" }
docs-serve       = { cmd = ["mkdocs", "serve", "-w", "docs"], depends-on = ["copy_readme"] }
docs-deploy      = { cmd = ["mkdocs", "gh-deploy", "--force"], depends-on = ["copy_readme"] }
pytest_run       = { cmd = ["pytest", "tests",], depends-on = ["install_ipkernel"] }
lint_format      = "ruff format"
lint_check       = "ruff -v check"
build            = { cmd = "uv build", description = "Build sdist and wheel into dist/" }
build-wheel      = { cmd = "uv build --wheel", description = "Build wheel only" }
build-sdist      = { cmd = "uv build --sdist", description = "Build sdist only" }
build-conda      = { cmd = "pixi build", description = "Build conda package" }
clean-dist       = { cmd = "rm -rf dist/", description = "Remove build artifacts" }
benchmarks_rc            = { cmd = ["python", "benchmarks/rc/run.py"],               description = "Cross-simulator RC low-pass (circulax vs VACASK vs ngspice)" }
benchmarks_mul           = { cmd = ["python", "benchmarks/mul/run.py"],              description = "Cross-simulator 4-stage diode multiplier" }
benchmarks_ring          = { cmd = ["python", "benchmarks/ring/run.py"],             description = "Cross-simulator ring oscillator sweep (N ∈ {3,9,15,21,27,31,33})" }
benchmarks_ring_bsim4    = { cmd = ["python", "benchmarks/ring_bsim4/bench_bsim4_osdi.py"], description = "BSIM4 ring oscillator via OSDI path" }
benchmarks_rectifier     = { cmd = ["python", "benchmarks/fullwave_rect/run.py"],    description = "Full-wave rectifier (circulax vs ngspice waveform comparison)" }
benchmarks_clipper_hb    = { cmd = ["python", "benchmarks/diode_clipper_hb/run.py"], description = "Diode clipper harmonic balance vs ngspice" }
benchmarks_lc_ladder     = { cmd = ["python", "benchmarks/lc_ladder/run.py"],        description = "LC ladder scalability across linear-solver backends" }
benchmarks_stiff_newton  = { cmd = ["python", "benchmarks/stiff_newton/run.py"],     description = "Stiff Newton solver comparison" }
benchmarks_solver_cascade = { cmd = ["python", "benchmarks/diode_cascade_solver/run.py"], description = "Diode cascade internal solver comparison" }
benchmarks_all           = { depends-on = ["benchmarks_rc", "benchmarks_mul", "benchmarks_ring"], description = "Run rc, mul, and ring benchmarks end-to-end" }

# ---------------------------------------------------------------------------
# Environments
# ---------------------------------------------------------------------------

[tool.pixi.environments]
default = { features = ["py313", "dev"], solve-group = "py313" }

# CI matrix — minimal, no dev extras
py311 = { features = ["py311", "test"], solve-group = "py311" }
py312 = { features = ["py312", "test"], solve-group = "py312" }
py313 = { features = ["py313", "test"], solve-group = "py313" }

# Benchmark environment — includes NGSpice for accuracy comparisons
benchmark = { features = ["py313", "benchmark"], solve-group = "py313" }

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numpy.exceptions.ComplexWarning",
    "ignore:Complex dtype support in Diffrax:UserWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:papermill",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
fix = true
target-version = "py311"
line-length = 132

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
    "COM812",   # missing-trailing-comma
    "D401",     # imperative-mood
    "D105",     # undocumented-magic-method
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "E741",     # ambiguous-variable-name
    "ERA001",   # commented-out-code
    "FIX001",   # line-contains-fixme
    "FIX002",   # line-contains-todo
    "FIX004",   # line-contains-hack
    "N803",     # invalid-argument-name
    "N806",     # non-lowercase-variable-in-function
    "PD901",    # pandas-df-variable-name
    "PLC0414",  # useless-import-alias
    "PLC0415",  # import-outside-top-level
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PLW2901",  # redefined-loop-name
    "RET504",   # unnecessary-assign
    "RUF002",   # ambiguous-unicode-character-docstring
    "S324",     # hashlib-insecure-hash-function
    "TC001",    # typing-only-first-party-import
    "TC002",    # typing-only-third-party-import
    "TC003",    # typing-only-standard-library-import
    "TC006",    # runtime-cast-value
    "TD001",    # invalid-todo-tag
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TID252",   # relative-imports
    "TRY003",   # raise-vanilla-args
    "UP013",    # convert-typed-dict-functional-to-class
    "ANN401",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",      # flake8-annotations
    "ARG001",   # unused-function-argument
    "D",        # pydocstyle
    "E402",     # module-import-not-at-top-of-file
    "E501",     # line-too-long
    "F821",     # undefined-name
    "FBT003",   # boolean-positional-value-in-call
    "N816",     # mixed-case-variable-in-global-scope
    "PLC2401",  # non-ascii-name
    "S101",     # assert
    "SLF001",   # private-member-access
    "T201",     # print
]
"docs/hooks.py" = [
    "INP001",   # implicit-namespace-package
    "ARG001",   # unused-function-argument
    "ANN401",   # any-type
    "FBT001",   # boolean-type-hint-positional-argument
]
"tests/*" = [
    "ANN",      # flake8-annotations
    "D",        # pydocstyle
    "INP001",   # implicit-namespace-package
    "PT011",    # pytest-raises-too-broad
    "S101",     # assert
    "T201",     # print
]
"circulax/components/*.py" = [
    "N802",
    "ARG001",
]
